# aeneas

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
src/faceDetect/: __init__.py  camera.py  camsetup.py  motionDetection.py  person.py
src/stimulus/: client.py  downloadArdCLI.sh  main.py
