[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "opencv-contrib-python",
    "gpiozero",
    "boto3",
    "tello-python>=1.1.6",
]
name = "aeneas"
version = "0.0.1"
authors = [
    { name="Sebastian Wu", email="sebfrwu@gmail.com" },
]
description = "Dorm room security system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]

[project.urls]
Homepage = "https://github.com/sebswU/aeneas/tree/main"

[tool.hatch.build.targets.wheel]
packages = ["src/faceDetect"]